# artifacts/rawaf-dashboard/src/contractors/types.ts
@@ -1,6 +1,7 @@
 export interface Contractor {
   id: number;
   contractNo: string;
+  contractYear?: string | null;
   contractor: string;
   project: string;
   portfolio: string;
@@ -11,8 +12,13 @@ export interface Contractor {
   email: string;
   mainActivity?: string | null;
   businessProgram?: string | null;
+  workFamily?: string | null;
   workCategory?: string | null;
   unit?: string | null;
+  itemScope?: string | null;
+  techSpecs?: string | null;
+  measurements?: string | null;
+  itemCode?: string | null;
   localContent?: string | null;
   workDescription?: string | null;
   workScopeText?: string | null;
